fixed some minor issues on rent

--- a/frontend/myridehub/src/Rent/CarDetail.css
+++ b/frontend/myridehub/src/Rent/CarDetail.css
@@ -56,7 +56,7 @@
 
 /* Vehicle Details Box */
 .details-box {
-  background-color: #1f1f1f;
+  background-color: #100f0f;
   border: 1px solid #333;
   border-radius: 0.75rem;
   padding: 2rem;
