--- a/frontend/myridehub/src/Admin/AdminLogin.css
+++ b/frontend/myridehub/src/Admin/AdminLogin.css
@@ -13,7 +13,7 @@
   .admin-login-box {
     width: 100%;
     max-width: 500px;
-    background-color: #2e2e2e;
+    background-color: black;
     padding: 40px;
     border-radius: 12px;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
